--- a/src/styles/ids.css
+++ b/src/styles/ids.css
@@ -63,8 +63,19 @@
     margin-bottom: calc(var(--ids__density) * 0.4em);
 
     &.loud {
-      font-size: 2em;
-      line-height: 1.2;
+      font-size: 1.5em;
+      line-height: 1.4;
+      font-weight: 400;
+      color: rgba(var(--ids__text-RGB), 0.8);
+      max-width: 36ch;
+    }
+
+    &.loud-hero {
+      font-size: 1.35em;
+      line-height: 1.5;
+      font-weight: 400;
+      color: rgba(var(--ids__text-RGB), 0.75);
+      max-width: 42ch;
     }
 
     &.huge {
@@ -100,17 +111,19 @@
   & h1 {
     font-size: 3.6em;
     font-weight: 700;
-    letter-spacing: -0.01em;
-    line-height: calc(var(--ids__density) / 1.3);
-    margin-bottom: 0.4em;
+    letter-spacing: -0.02em;
+    line-height: 1.1;
+    margin-bottom: 0.5em;
 
     @media (width < 767px) {
       font-size: 2.6em;
     }
 
     &.S {
-      font-size: 2.4em;
-      font-weight: 650;
+      font-size: 2.8em;
+      font-weight: 700;
+      letter-spacing: -0.02em;
+      margin-bottom: 0.4em;
     }
     &.XS {
       font-size: 1.5em;
