--- a/src/components/landing/BlogPreview.astro
+++ b/src/components/landing/BlogPreview.astro
@@ -40,11 +40,14 @@ const posts = await getRecentBlogPosts(count);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1.2em;
+    margin-bottom: 26px;
   }
 
   .blog-preview__title {
+    font-size: 2em;
+    font-weight: 700;
     margin: 0;
+    letter-spacing: -0.02em;
   }
 
   .blog-preview__link {
