--- a/src/components/catalog/TagFilter.astro
+++ b/src/components/catalog/TagFilter.astro
@@ -69,6 +69,7 @@ const categoryLabels: Record<Tag['category'], string> = {
     padding: 0.35em 0.7em;
     font-size: 0.85em;
     font-family: inherit;
+    color: rgb(var(--ids__text-RGB));
     border: 1px solid rgba(var(--ids__text-RGB), 0.2);
     border-radius: 0.3em;
     background: transparent;
@@ -83,7 +84,7 @@ const categoryLabels: Record<Tag['category'], string> = {
 
   .tag-filter__tag--active {
     background: rgb(var(--ids__link-RGB));
-    color: white;
+    color: rgb(var(--ids__background-RGB));
     border-color: rgb(var(--ids__link-RGB));
   }
 
